<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.HomeFragment">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvHome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/home"
            android:gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMotionLayout"
            style="@style/Button_Click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHome"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/go_to_motion_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMotionYouTube"
            style="@style/Button_Click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnMotionLayout"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/go_to_you_tube_motion_layout" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>