<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_10sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_10sdp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLoginTittle"
            style="@style/Heading_Tittle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/login_heading_text"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEmail"
            style="@style/Edittext_text_Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/tvLoginTittle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/Edittext_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/email_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPassword"
            style="@style/Edittext_text_Layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/tlEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/Edittext_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/password_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvForgotPassword"
            style="@style/Normal_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/forgot_password_text"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintTop_toBottomOf="@id/tlPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/Button_Click"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSignUpHere"
            style="@style/Normal_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center"
            android:text="@string/dont_have_account_text"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvOr"
            style="@style/Normal_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/or_text"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/tvSignUpHere" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSignInWith"
            style="@style/Normal_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/sign_in_with_text"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/tvOr" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_google"
            app:layout_constraintEnd_toStartOf="@id/ivFaceBook"
            app:layout_constraintStart_toStartOf="@id/guideLineStart"
            app:layout_constraintTop_toBottomOf="@id/tvSignInWith" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivFaceBook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="@id/ivGoogle"
            app:layout_constraintEnd_toStartOf="@id/ivInsta"
            app:layout_constraintStart_toEndOf="@id/ivGoogle"
            app:layout_constraintTop_toTopOf="@id/ivGoogle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivInsta"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:padding="@dimen/_7sdp"
            app:srcCompat="@drawable/ic_instagram"
            android:background="@drawable/rectangle_outline_box"
            app:layout_constraintBottom_toBottomOf="@id/ivGoogle"
            app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
            app:layout_constraintStart_toEndOf="@id/ivFaceBook"
            app:layout_constraintTop_toTopOf="@id/ivGoogle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>